chore: minor refactor

--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
         "@nuxt/fonts": "^0.10.3",
         "@nuxt/ui": "^2.21.0"
     },
-    "author": "sckoorp",
+    "author": "syvixor",
     "license": "MIT"
 }
